fix: header logo on mobile is now responsive

--- a/src/styles/sections/_header.scss
+++ b/src/styles/sections/_header.scss
@@ -18,4 +18,12 @@
       display: none;
     }
   }
+
+  @include u.respond-to('tablet') {
+    padding-inline: 2rem;
+  }
+
+  @include u.respond-to('intermediate') {
+    padding-inline: 1rem;
+  }
 }
